# subuidless

./: .clippy.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING  Cargo.toml  README.MD  build.rs  deny.toml  devbox.json  process-compose.yaml  seccomp.json
.github/workflows/: audit.yaml  ci.yaml
src/: error.rs  lib.rs  main.rs  mem.rs  rootlesscontainers.proto  syscall.rs  xattr.rs
src/syscall/: fchownat.rs  fstatat.rs  openat.rs
tests/: executor.rs  fchownat.rs  files.txt  newfstatat.rs
