[package]
name = "subuidless"
version = "0.1.0"
edition = "2021"
description = "Rootless Containers without `/etc/subuid` and `/etc/subgid`"
repository = "https://github.com/rootless-containers/subuidless"
readme = "README.MD"
keywords = ["subuid", "rootless", "container", "docker", "seccomp"]
categories = ["virtualization"]
rust-version = "1.77.1"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.82"
libc = "0.2.153"
libseccomp = "0.3.0"
protobuf = "3.4.0"
sendfd = "0.4.3"
xattr = "1.3.1"

[build-dependencies]
protobuf-codegen = "3.4.0"


[lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
unsafe_code = "deny"
non-ascii-idents = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
similar_names = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
style = "warn"
perf = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
cargo = "warn"
restriction = "warn"
blanket_clippy_restriction_lints = { level = "allow", priority = 1 }
mod_module_files = { level = "allow", priority = 1 }
missing_docs_in_private_items = { level = "allow", priority = 1 }
missing_inline_in_public_items = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
question_mark_used = { level = "allow", priority = 1 }
separated_literal_suffix = { level = "allow", priority = 1 }
