[package]
name = "subuidless"
version = "0.1.0"
edition = "2021"
description = "Rootless Containers without `/etc/subuid` and `/etc/subgid`"
repository = "https://github.com/rootless-containers/subuidless"
readme = "README.MD"
keywords = ["subuid", "rootless", "container", "docker", "seccomp"]
categories = ["virtualization"]
rust-version = "1.77.1"
license = "AGPL-3.0-or-later"



[dependencies]
anyhow = "1.0.82"
inventory = "0.3.15"
libseccomp = "0.3.0"
nix = { version = "0.28.0", features = ["fs", "uio", "process", "sched"] }
protobuf = "3.4.0"
sendfd = "0.4.3"
thiserror = "1.0.58"
rustix = { version = "0.38.32", features = ["fs", "process"] }
serde_json = "1.0.115"
procfs = "0.16.0"
subuidless-test = { git = "https://github.com/Srylax/subuidless-test", optional = true }


[dev-dependencies]
typetag = "0.2.16"
serde = "1.0.197"
proptest = "1.4.0"
subuidless-test = { git = "https://github.com/Srylax/subuidless-test" }


[patch.crates-io]
libseccomp = { git = "https://github.com/libseccomp-rs/libseccomp-rs" }

[build-dependencies]
protobuf-codegen = "3.4.0"


[profile.release]
lto = true

[features]
executor = ["subuidless-test"]

[[bin]]
name = "executor"
path = "tests/executor.rs"
required-features = ["executor"]


[lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
unsafe_code = "deny"
non-ascii-idents = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
similar_names = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
style = "warn"
perf = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
cargo = "warn"
restriction = "warn"
blanket_clippy_restriction_lints = { level = "allow", priority = 1 }
mod_module_files = { level = "allow", priority = 1 }
missing_docs_in_private_items = { level = "allow", priority = 1 }
missing_inline_in_public_items = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
question_mark_used = { level = "allow", priority = 1 }
separated_literal_suffix = { level = "allow", priority = 1 }
std_instead_of_alloc = { level = "allow", priority = 1 }
std_instead_of_core = { level = "allow", priority = 1 }
missing_trait_methods = { level = "allow", priority = 1 }
shadow_reuse = { level = "allow", priority = 1 }
pub_with_shorthand = { level = "allow", priority = 1 }
single_call_fn = { level = "allow", priority = 1 }
error_impl_error = { level = "allow", priority = 1 }
self_named_module_files = { level = "allow", priority = 1 }
tests_outside_test_module = { level = "allow", priority = 1 }
